# sparqlx

./: .release-manifest.json  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: gitlint.yml  release-please.yml  ruff-formatter.yml  ruff-linter.yml  tests.yml
docs/: rdflib_integration.md  recipes.md  sparql_protocol_implementation.md
src/sparqlwrapper/: __init__.py  sparqlwrapper.py  sparqlwrapper.pyi  wrappers.py
src/sparqlwrapper/utils/: utils.py
src/sparqlx/: __init__.py  sparqlwrapper.py  sparqlwrapper.pyi  types.py  wrappers.py
src/sparqlx/utils/: client_manager.py  converters.py  logging_hooks.py  operation_parameters.py  transports.py  types.py  utils.py
tests/: conftest.py  utils.py
tests/data/: queries.py  test_graph.ttl  test_graphs.trig
tests/test_sparqlwrapper/: test_client_sharing.py  test_sparqlwrapper_aquery.py  test_sparqlwrapper_basic_query_operations.py  test_sparqlwrapper_optional_parsing.py  test_sparqlwrapper_query.py  test_sparqlwrapper_query_request_params.py  test_sparqlwrapper_query_sad_path.py  test_sparqlwrapper_update.py  test_sparqlwrapper_uri_parameters.py
tests/test_sparqlwrapper/test_static_types/: test_query_types.yml
