[project]
name = "sparqlx"
version = "0.5.0"
requires-python = ">=3.12"
description = "Python library for httpx-based SPARQL Query and Update Operations according to the SPARQL 1.2 Protocol"
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "Lukas Plank", email = "lupl@tuta.io" }
]
maintainers = [
    { name = "Lukas Plank", email = "lupl@tuta.io" }
]
keywords = [
    "SPARQL",
    "RDF",
]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
]

dependencies = [
    "httpx>=0.28.1",
    "rdflib>=7.3.0",
]

[project.urls]
Homepage = "https://github.com/lu-pl/sparqlx"
Documentation = "https://github.com/lu-pl/sparqlx"
Source = "https://github.com/lu-pl/sparqlx"
History = "https://github.com/lu-pl/sparqlx/releases"
Tracker = "https://github.com/lu-pl/sparqlx/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "mypy>=1.15.0",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.1.0",
    "pytest-cov>=6.2.1",
    "pytest-mypy-plugins>=3.2.0",
    "ruff>=0.12.12",
    "testcontainers>=4.12.0",
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]